fix image divider jump

--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -23,7 +23,6 @@
 
 .imageDivider {
   position: fixed;
-  top: 160px;
   transform: translateY(-52%);
   z-index: 1;
 }
